--- a/menu.html
+++ b/menu.html
@@ -89,8 +89,8 @@
 			<div class="win-menu">
 				<div class="win-menu__text"><div class="">ВЫ ПОБЕДИЛИ!😁</div>  Правильное слово: <span class="correct-word"></span> </div>
 				<img style="width: 420px; height: 250px;" class="img8" src="img/visilaca-win.png" alt="">
-				<a href="#" onclick="location.href = 'index.html'; return false;"><input class="lost-menu__btn" type="button" value="Играть заново"></a>
-				<a href="#"><input onclick="window.location.href = 'menu.html'" class="lost-menu__btn menu-btn" type="button" value="Меню"></a>
+				<a href="#" onclick="location.href = 'menu.html'; return false;"><input class="lost-menu__btn" type="button" value="Играть заново"></a>
+				<a href="#"><input onclick="window.location.href = 'index.html'" class="lost-menu__btn menu-btn" type="button" value="Меню"></a>
 			</div>
 
 		</div>
